@startuml
'https://plantuml.com/class-diagram

class Tabular {
UUID uuid
String title
}


class Task{
UUID uuid
String Title
LocalTime creationTime
LocalDateTime updateTime
LocalDateTime dueDate
Task.Status status
}
enum State {
  OPENED
  CLOSED
 }

Task+--State

class TaskContent {
}
class TaskContentImage {
}

class User {
UUID uuid
String firstname
String lastname
}

Tabular *-- Task

Task -- "owner" User
Task *-- "collaborator" User
Task "1" -- "1" TaskContent

TaskContent <-- TaskContentImage
@enduml